tests/js/invalid/enum/mismatched-types-0.buri
Color = .red | .green | .blue
Block = .red | .green | .blue

blue: Block = Color.blue